<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.gfx.hankei_n.activity.MainActivity"
        >

    <item
            android:id="@+id/action_add_memo"
            android:orderInCategory="100"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/add_location_memo"
            android:checkable="true"
            app:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/action_toggle_satellite"
            android:orderInCategory="100"
            android:title="@string/action_toggle_satellite"
            android:checkable="true"
            app:showAsAction="never"
            />

    <item
            android:id="@+id/action_reset"
            android:orderInCategory="100"
            android:title="@string/action_reset"
            app:showAsAction="never"
            />

    <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            android:title="@string/action_about"
            app:showAsAction="never"
            />

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"
            />

</menu>
