<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        >

    <data>

        <variable
                name="memo"
                type="com.github.gfx.hankei_n.model.LocationMemo"
                />

        <variable
                name="fragment"
                type="com.github.gfx.hankei_n.fragment.EditLocationMemoFragment"
                />

        <import type="android.view.View" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                >

            <ImageView
                    android:id="@+id/iconCircle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="8dp"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/circle"
                    >

                <requestFocus />
            </ImageView>

            <Button
                    android:id="@+id/delete"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_delete"
                    android:enabled="@{!memo.address.empty}"
                    android:onClick="@{fragment.askToRemove}"
                    android:text="@string/delete"
                    />

            <Button
                    android:id="@+id/street_view"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_view"
                    android:enabled="@{!memo.address.empty}"
                    android:onClick="@{fragment.openWithStreetView}"
                    android:text="@string/street_view"
                    />

            <Button
                    android:id="@+id/map"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_mapmode"
                    android:enabled="@{!memo.address.empty}"
                    android:onClick="@{fragment.openWithMap}"
                    android:text="@string/map"
                    />

            <Button
                    android:id="@+id/share"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_share"
                    android:enabled="@{!memo.address.empty}"
                    android:onClick="@{fragment.openShareChooser}"
                    android:text="@string/share"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:labelFor="@+id/edit_address"
                    android:text="@string/label_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />

            <AutoCompleteTextView
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionHint="@string/attribution_powered_by_google"
                    android:completionHintView="@layout/widget_powered_by_google"
                    android:completionThreshold="3"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="512"
                    android:text="@{memo.address}"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:labelFor="@+id/edit_note"
                    android:text="@string/label_note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />

            <EditText
                    android:id="@+id/edit_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="512"
                    android:singleLine="true"
                    android:text="@{memo.note}"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                >

            <CheckBox
                    android:id="@+id/checkbox_circle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@{memo.drawCircle}"
                    android:text="@string/circle_required"
                    />


            <EditText
                    android:id="@+id/edit_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:enabled="@{memo.drawCircle}"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:text="@{String.valueOf(memo.radius)}"
                    tools:text="@string/default_radius"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:labelFor="@+id/edit_radius"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/radius_unit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
        </LinearLayout>
    </LinearLayout>
</layout>
