<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.github.gfx.hankei_n.activity.AboutActivity"
        >

    <data>

        <variable
                name="activity"
                type="com.github.gfx.hankei_n.activity.AboutActivity"
                />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Toolbar"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                >

            <TextView
                    android:id="@+id/text_about_this_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="This is $AppName version $VersionName."
                    />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    />

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{activity.openProjectPage}"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/action_project_page"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/black"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{activity.openAppInfo}"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/action_app_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/black"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{activity.openWithPlayStore}"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/action_open_with_play_store"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        />
            </android.support.v7.widget.CardView>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    />

        </LinearLayout>
    </LinearLayout>
</layout>
